--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
   <h1>Hello, world!</h1>
   <p>Welcome to OET Services</p>
-  <p><a class="btn btn-primary btn-lg" role="button" href="<%= privacy_path %>">Learn more</a></p>
+  <p><a class="btn btn-primary btn-lg" role="button" href="#">Learn more</a></p>
 </div>
