--- a/app/views/pay_lines/_form.html.erb
+++ b/app/views/pay_lines/_form.html.erb
@@ -1,32 +1,38 @@
 <%= form_for @pay_line, :html => { :class => 'form-horizontal' } do |f| %>
+
+  
   <div class="form-group">
-    <%= f.label :label, :class => 'control-label' %>
-    <div class="controls">
+    <%= f.label :slot_id, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :slot_id, options_for_select( Slot.all.collect { |s| [ s.name, s.id ] }, @pay_line.slot_id), {}, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :label, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
       <%= f.text_field :label, :class => 'form-control' %>
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :x, :class => 'control-label' %>
-    <div class="controls">
+    <%= f.label :x, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
       <%= f.text_field :x, :class => 'form-control' %>
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :y, :class => 'control-label' %>
-    <div class="controls">
+    <%= f.label :y, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
       <%= f.text_field :y, :class => 'form-control' %>
     </div>
   </div>
+
   <div class="form-group">
-    <%= f.label :slot_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :slot_id, :class => 'form-control' %>
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                pay_lines_path, :class => 'btn btn-default' %>
     </div>
   </div>
-
-  
-  <%= f.submit nil, :class => 'btn btn-primary' %>
-  <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-            pay_lines_path, :class => 'btn btn-default' %>
  
 <% end %>
