--- a/app/views/pay_tables/_form.html.erb
+++ b/app/views/pay_tables/_form.html.erb
@@ -1,32 +1,39 @@
 <%= form_for @pay_table, :html => { :class => 'form-horizontal' } do |f| %>
+
   <div class="form-group">
-    <%= f.label :count, :class => 'control-label' %>
-    <div class="controls">
+    <%= f.label :slot_id, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :slot_id, options_for_select( Slot.all.collect { |s| [ s.name, s.id ] }, @pay_table.slot_id), {}, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :stamp_id, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :stamp_id, options_for_select( Stamp.all.collect { |s| [ s.name, s.id ] }, @pay_table.stamp_id), {}, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :count, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
       <%= f.text_field :count, :class => 'form-control' %>
     </div>
   </div>
+  
   <div class="form-group">
-    <%= f.label :stamp_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :stamp_id, :class => 'form-control' %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :slot_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :slot_id, :class => 'form-control' %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :points, :class => 'control-label' %>
-    <div class="controls">
+    <%= f.label :points, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
       <%= f.text_field :points, :class => 'form-control' %>
     </div>
   </div>
 
-  
-  <%= f.submit nil, :class => 'btn btn-primary' %>
-  <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-            pay_tables_path, :class => 'btn btn-default' %>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">  
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                pay_tables_path, :class => 'btn btn-default' %>
+    </div>
+  </div>
  
 <% end %>
