--- a/app/views/reels/_form.html.erb
+++ b/app/views/reels/_form.html.erb
@@ -1,20 +1,39 @@
 <%= form_for @reel, :html => { :class => 'form-horizontal' } do |f| %>
+
   <div class="form-group">
-    <%= f.label :stamp_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :stamp_id, :class => 'form-control' %>
+    <%= f.label :slot_id, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :slot_id, options_for_select( Slot.all.collect { |s| [ s.name, s.id ] }, @reel.slot_id), {}, :class => 'form-control' %>
     </div>
   </div>
+
   <div class="form-group">
-    <%= f.label :position, :class => 'control-label' %>
-    <div class="controls">
+    <%= f.label :stamp_id, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :stamp_id, options_for_select( Stamp.all.collect { |s| [ s.name, s.id ] }, @reel.stamp_id), {}, :class => 'form-control' %>
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <%= f.label :label, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :label, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :position, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
       <%= f.text_field :position, :class => 'form-control' %>
     </div>
   </div>
 
-  
-  <%= f.submit nil, :class => 'btn btn-primary' %>
-  <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-            reels_path, :class => 'btn btn-default' %>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                reels_path, :class => 'btn btn-default' %>
+    </div>
+  </div>
  
 <% end %>
