--- a/app/views/slots/_form.html.erb
+++ b/app/views/slots/_form.html.erb
@@ -1,26 +1,31 @@
 <%= form_for @slot, :html => { :class => 'form-horizontal' } do |f| %>
   <div class="form-group">
-    <%= f.label :name, :class => 'control-label' %>
-    <div class="controls">
+    <%= f.label :name, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
       <%= f.text_field :name, :class => 'form-control' %>
     </div>
   </div>
+
   <div class="form-group">
-    <%= f.label :description, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :description, :class => 'form-control' %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :game_id, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :game_id, :class => 'form-control' %>
+    <%= f.label :game_id, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.select :game_id, options_for_select( Game.all.collect { |g| [ g.name, g.id ] }, @slot.game_id), {}, :class => 'form-control' %>
     </div>
   </div>
 
-  
-  <%= f.submit nil, :class => 'btn btn-primary' %>
-  <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-            slots_path, :class => 'btn btn-default' %>
- 
+  <div class="form-group">
+    <%= f.label :description, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_area :description, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                slots_path, :class => 'btn btn-default' %>
+    </div>
+  </div> 
+
 <% end %>
