Updated slot machine packages

--- a/app/views/slots/_form.html.erb
+++ b/app/views/slots/_form.html.erb
@@ -29,3 +29,10 @@
   </div> 
 
 <% end %>
+
+<div class="well">
+  <%= link_to "New Pay Line", new_pay_line_path(slot_id: @slot.id), class: "btn btn-default" %>
+  <%= link_to "New Pay Table", new_pay_table_path(slot_id: @slot.id), class: "btn btn-default" %>
+  <%= link_to "New Reel", new_reel_path(slot_id: @slot.id), class: "btn btn-default" %>
+  <%= link_to "New Stamps", new_pay_line_path(slot_id: @slot.id), class: "btn btn-default" %>
+</div>
