Added designs to make math model edit intuitive

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         <% if user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Games", games_path %></li>
-            <li><%= link_to "Slots", slots_path %></li>
+            <li><%= link_to "Math Models", math_models_path %></li>
             <li><%= link_to "Pay Lines", pay_lines_path %></li>
             <li><%= link_to "Pay Tables", pay_tables_path %></li>
             <li><%= link_to "Reels", reels_path %></li>
