--- a/app/views/pay_lines/show.html.erb
+++ b/app/views/pay_lines/show.html.erb
@@ -10,8 +10,8 @@
   <dd><%= @pay_line.x %></dd>
   <dt><strong><%= model_class.human_attribute_name(:y) %>:</strong></dt>
   <dd><%= @pay_line.y %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:slot_id) %>:</strong></dt>
-  <dd><%= @pay_line.slot_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:math_model_id) %>:</strong></dt>
+  <dd><%= @pay_line.math_model_id %></dd>
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
