--- a/app/views/pay_tables/show.html.erb
+++ b/app/views/pay_tables/show.html.erb
@@ -8,8 +8,8 @@
   <dd><%= @pay_table.count %></dd>
   <dt><strong><%= model_class.human_attribute_name(:stamp_id) %>:</strong></dt>
   <dd><%= @pay_table.stamp_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:slot_id) %>:</strong></dt>
-  <dd><%= @pay_table.slot_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:math_model_id) %>:</strong></dt>
+  <dd><%= @pay_table.math_model_id %></dd>
   <dt><strong><%= model_class.human_attribute_name(:points) %>:</strong></dt>
   <dd><%= @pay_table.points %></dd>
 </dl>
