--- a/app/views/stamps/show.html.erb
+++ b/app/views/stamps/show.html.erb
@@ -8,8 +8,8 @@
   <dd><%= @stamp.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
   <dd><%= @stamp.description %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:slot_id) %>:</strong></dt>
-  <dd><%= @stamp.slot_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:math_model_id) %>:</strong></dt>
+  <dd><%= @stamp.math_model_id %></dd>
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
