--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -22,4 +22,10 @@
   </div>
  
 <% end %>
-<%= link_to "New Slot", new_slot_path(game_id: @game.id) %>
+
+<ul>
+  <% @game.math_models.each do |math_model| %>
+    <li><%= "#{math_model.name} -> #{link_to 'Edit', edit_math_model_path(math_model)}".html_safe %></li>
+  <% end %>
+  <li><%= link_to "New Math Model", new_math_model_path(game_id: @game.id) %></li>
+</ul>
