--- a/app/views/pay_tables/index.html.erb
+++ b/app/views/pay_tables/index.html.erb
@@ -8,7 +8,7 @@
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:count) %></th>
       <th><%= model_class.human_attribute_name(:stamp_id) %></th>
-      <th><%= model_class.human_attribute_name(:slot_id) %></th>
+      <th><%= model_class.human_attribute_name(:math_model_id) %></th>
       <th><%= model_class.human_attribute_name(:points) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
@@ -20,7 +20,7 @@
         <td><%= link_to pay_table.id, pay_table_path(pay_table) %></td>
         <td><%= pay_table.count %></td>
         <td><%= pay_table.stamp_id %></td>
-        <td><%= pay_table.slot_id %></td>
+        <td><%= pay_table.math_model_id %></td>
         <td><%= pay_table.points %></td>
         <td><%=l pay_table.created_at %></td>
         <td>
