--- a/app/views/reels/_form.html.erb
+++ b/app/views/reels/_form.html.erb
@@ -1,9 +1,9 @@
 <%= form_for @reel, :html => { :class => 'form-horizontal' } do |f| %>
 
   <div class="form-group">
-    <%= f.label :slot_id, :class => 'col-sm-2 control-label' %>
+    <%= f.label :math_model_id, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.select :slot_id, options_for_select( Slot.all.collect { |s| [ s.name, s.id ] }, @reel.slot_id), {}, :class => 'form-control' %>
+      <%= f.select :math_model_id, options_for_select( MathModel.all.collect { |mm| [ mm.name, mm.id ] }, @reel.math_model_id), {}, :class => 'form-control' %>
     </div>
   </div>
 
