--- a/app/views/stamps/index.html.erb
+++ b/app/views/stamps/index.html.erb
@@ -8,7 +8,7 @@
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%= model_class.human_attribute_name(:slot_id) %></th>
+      <th><%= model_class.human_attribute_name(:math_model_id) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -19,7 +19,7 @@
         <td><%= link_to stamp.id, stamp_path(stamp) %></td>
         <td><%= stamp.name %></td>
         <td><%= stamp.description %></td>
-        <td><%= stamp.slot_id %></td>
+        <td><%= stamp.math_model_id %></td>
         <td><%=l stamp.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
