--- a/app/views/math_models/_form.html.erb
+++ b/app/views/math_models/_form.html.erb
@@ -14,17 +14,29 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :version, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :version, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
     <%= f.label :description, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-10">
       <%= f.text_area :description, :class => 'form-control' %>
     </div>
   </div>
 
+  
+
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit nil, :class => 'btn btn-primary' %>
-      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                math_models_path, :class => 'btn btn-default' %>
+      <label class="checkbox-inline"><%= f.check_box :active %> Active</lable>
+      <div>
+        <%= f.submit nil, :class => 'btn btn-primary' %>
+        <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                  math_models_path, :class => 'btn btn-default' %>
+      </div>
     </div>
   </div> 
 <% end %>
