Changed ERD for application

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -23,20 +23,13 @@
  
 <% end %>
 
-<div class="col-md-6">
-  <ul>
-    <% @game.math_models.each do |math_model| %>
-      <li class="<%= "muted" unless math_model.active %>"><%= "#{math_model.name} -> #{link_to 'Edit', edit_math_model_path(math_model)}".html_safe %></li>
-    <% end %>
-    <li><%= link_to "New Math Model", new_math_model_path(game_id: @game.id) %></li>
-  </ul>
-</div>
 
 <div class="col-md-6">
+  <legend>Themes</legend>
   <ul>
-    <% @game.assets.each do |asset| %>
-      <li class="<%= "muted" unless asset.active %>"><%= "#{asset.label} -> #{link_to 'Edit', edit_asset_path(asset.id)}".html_safe %></li>
+    <% @game.themes.each do |theme| %>
+      <li><%= "#{theme.name} -> #{link_to 'Edit', edit_theme_path(theme.id)}".html_safe %></li>
     <% end %>
-    <li><%= link_to "New Asset", new_asset_path(game_id: @game.id) %></li>
+    <li><%= link_to "New Theme", new_theme_path(game_id: @game.id) %></li>
   </ul>
 </div>
