--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_for @asset, :html => { :class => 'form-horizontal' } do |f| %>
 
-  <%= f.hidden_field :game_id, value: (params[:game_id] || @asset.game_id) %>
+  <%= f.hidden_field :resource_id, value: (params[:resource_id] || @asset.resource_id) %>
+  <%= f.hidden_field :resource_type, value: (params[:resource_type] || @asset.resource_type) %>
 
   <div class="form-group">
     <%= f.label :version, :class => 'col-sm-2 control-label' %>
@@ -23,7 +24,7 @@
   <div class="form-group">
     <%= f.label :bundle_type, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-5">
-      <%= f.select :bundle_type, options_for_select(["MINIGAME", "GAMEUI", "SLOTMACHINE", "ALL"], @asset.bundle_type), {}, :class => 'form-control' %>
+      <%= f.select :bundle_type, options_for_select(ASSET_BUNDLE_TYPE, (params[:bundle_type] || @asset.bundle_type)), {}, :class => 'form-control' %>
     </div>
   </div>
   <div class="form-group">
