--- a/app/views/math_models/_form.html.erb
+++ b/app/views/math_models/_form.html.erb
@@ -7,9 +7,9 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :game_id, :class => 'col-sm-2 control-label' %>
+    <%= f.label :machine_id, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.select :game_id, options_for_select( Game.all.collect { |g| [ g.name, g.id ] }, @math_model.game_id), {}, :class => 'form-control' %>
+      <%= f.select :machine_id, options_for_select( Machine.all.collect { |m| [ m.name, m.id ] }, (params[:machine_id] || @math_model.machine_id)), {}, :class => 'form-control' %>
     </div>
   </div>
 
