--- a/app/views/math_models/_form.html.erb
+++ b/app/views/math_models/_form.html.erb
@@ -16,7 +16,56 @@
   <div class="form-group">
     <%= f.label :version, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_field :version, :class => 'form-control' %>
+      <%= f.number_field :version, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :wild_type, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :wild_type, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :free_spins_multipliers, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.number_field :free_spins_multipliers, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :num_free_spins, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.number_field :num_free_spins, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :size_x, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.number_field :size_x, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :size_y, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.number_field :size_y, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :is_irregular, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.check_box :is_irregular %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :is_special, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.check_box :is_special  %>
     </div>
   </div>
 
@@ -27,16 +76,19 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <%= f.label :active, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.check_box :active %>
+    </div>
+  </div>
   
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <label class="checkbox-inline"><%= f.check_box :active %> Active</lable>
-      <div>
-        <%= f.submit nil, :class => 'btn btn-primary' %>
-        <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                  math_models_path, :class => 'btn btn-default' %>
-      </div>
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                math_models_path, :class => 'btn btn-default' %>
     </div>
   </div> 
 <% end %>
