--- a/app/views/reels/_form.html.erb
+++ b/app/views/reels/_form.html.erb
@@ -22,9 +22,9 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :position, :class => 'col-sm-2 control-label' %>
+    <%= f.label :size, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_field :position, :class => 'form-control' %>
+      <%= f.number_field :size, :class => 'form-control' %>
     </div>
   </div>
 
