--- a/app/views/stamps/_form.html.erb
+++ b/app/views/stamps/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="form-group">
     <%= f.label :math_model_id, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.select :math_model_id, options_for_select( MathModel.all.collect { |mm| [ mm.name, mm.id ] }, @stamp.math_model_id), {}, :class => 'form-control' %>
+      <%= f.select :math_model_id, options_for_select( MathModel.all.collect { |mm| [ mm.name, mm.id ] }, (params[:math_model_id] || @stamp.math_model_id)), {}, :class => 'form-control' %>
     </div>
   </div>
 
@@ -13,10 +13,18 @@
       <%= f.text_field :name, :class => 'form-control' %>
     </div>
   </div>
+
   <div class="form-group">
-    <%= f.label :description, :class => 'col-sm-2 col-sm-2 control-label' %>
+    <%= f.label :symbol_type, :class => 'col-sm-2 col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_area :description, :class => 'form-control' %>
+      <%= f.select :symbol_type, options_for_select(SYMBOL_TYPE), {}, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :size, :class => 'col-sm-2 col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.number_field :size, :class => 'form-control' %>
     </div>
   </div>
 
