Added back button on math_model, assets, machine and mini_games; added auto version getter

--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -23,7 +23,7 @@
     <div class="col-sm-offset-2 col-sm-10">  
       <%= f.submit nil, :class => 'btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                machines_path, :class => 'btn btn-default' %>
+                edit_theme_path(@theme), :class => 'btn btn-default' %>
     </div>
   </div>
  
