--- a/app/views/mini_games/_form.html.erb
+++ b/app/views/mini_games/_form.html.erb
@@ -22,7 +22,7 @@
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit nil, :class => 'btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-          mini_games_path, :class => 'btn btn-default' %>
+          edit_machine_path(@machine), :class => 'btn btn-default' %>
     </div>
   </div>
  
