--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -35,13 +35,17 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :active, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-5">
+      <%= f.check_box :active %>
+    </div>
+  </div>
+
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">  
-      <label class="checkbox-inline"><%= f.check_box :active %> Active</lable>
-      <div>
-        <%= f.submit nil, :class => 'btn btn-primary' %>
-        <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-              assets_path, :class => 'btn btn-default' %>    
-      </div>
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+            edit_polymorphic_path(@resource), :class => 'btn btn-default' %>    
     </div>
   </div>
  
