--- a/app/views/machines/new.html.erb
+++ b/app/views/machines/new.html.erb
@@ -1,5 +1,3 @@
 <%- model_class = Machine -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
-</div>
+<legend><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></legend>
 <%= render :partial => 'form' %>
