--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -64,7 +64,7 @@
 <div class="col-md-3">
   <legend>Out Game Assets</legend>
   <ul>
-    <% @machine.in_game_assets.each do |asset| %>
+    <% @machine.out_game_assets.each do |asset| %>
       <li class="<%= "muted" unless asset.active %>"><%= "#{asset.label} -> #{link_to 'Edit', edit_asset_path(asset.id)}".html_safe %></li>
     <% end %>
     <li><%= link_to "New Out Game Asset", new_asset_path(resource_id: @machine.id, resource_type: "Machine", bundle_type: ASSET_BUNDLE_TYPE[:OUT_GAME_ASSET]) %></li>
