--- a/app/views/pay_lines/_form.html.erb
+++ b/app/views/pay_lines/_form.html.erb
@@ -31,7 +31,7 @@
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit nil, :class => 'btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                pay_lines_path, :class => 'btn btn-default' %>
+                edit_math_model_path(@math_model), :class => 'btn btn-default' %>
     </div>
   </div>
  
