--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -22,7 +22,7 @@
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit nil, :class => 'btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                themes_path, :class => 'btn btn-default' %>
+                edit_game_path(@game), :class => 'btn btn-default' %>
 
     </div>
   </div>
