--- a/app/views/math_models/_form.html.erb
+++ b/app/views/math_models/_form.html.erb
@@ -56,6 +56,13 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :num_pay_lines, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.number_field :num_pay_lines, :class => 'form-control' %>
+    </div>
+  </div>
+
+  <div class="form-group">
     <%= f.label :is_irregular, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-10">
       <%= f.check_box :is_irregular %>
@@ -107,6 +114,7 @@
               <li>
                 <%= "(#{pay_line.x}, #{pay_line.y})" %>
                 <%= link_to "Edit", edit_pay_line_path(id: pay_line.id) %>
+                <%= link_to "X", pay_line_path(pay_line), method: :delete, :data => { :confirm => 'Are you sure?' }, class: "delete" %>
               </li>
             <% end %>
           </ul>
@@ -122,9 +130,10 @@
         <li>
           <%= "#{pay_table.symbol}(#{pay_table.count}) -> #{pay_table.points}" %>
           <%= link_to "Edit", edit_pay_table_path(id: pay_table.id) %>
+          <%= link_to "X", pay_table_path(pay_table), method: :delete, :data => { :confirm => 'Are you sure?' }, class: "delete" %>
         </li>
       <% end %>
-      <li><%= link_to "New Pay Table", new_pay_table_path(math_model_id: @math_model.id) %></li>
+      <li><%= link_to "Pay Table", pay_tables_math_model_path(id: @math_model.id) %></li>
     </ul>
   </li>
   <li>
@@ -138,6 +147,7 @@
             <li>
               <%= reel.symbol %>
               <%= link_to "Edit", edit_reel_path(id: reel.id) %>
+              <%= link_to "X", reel_path(reel), method: :delete, :data => { :confirm => 'Are you sure?' }, class: "delete" %>
             </li>
           <% end %>
         </ul>
@@ -152,6 +162,7 @@
         <li>
           <%= "#{stamp.name}" %>
           <%= link_to "Edit", edit_stamp_path(id: stamp.id) %>
+          <%= link_to "X", stamp_path(stamp), method: :delete, :data => { :confirm => 'Are you sure?' }, class: "delete" %>
         </li>
       <% end %>
       <li><%= link_to "New Stamp", new_stamp_path(math_model_id: @math_model.id) %></li>
