--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -29,44 +29,63 @@
  
 <% end %>
 
+<% unless @machine.new_record? %>
 
-<div class="col-md-3">
-  <legend>Math Models</legend>
-  <ul>
-    <% @machine.math_models.each do |math_model| %>
-      <li class="<%= "muted" unless math_model.active %>"><%= "#{math_model.name} -> #{link_to 'Edit', edit_math_model_path(math_model)}".html_safe %></li>
-    <% end %>
-    <li><%= link_to "New Math Model", new_math_model_path(machine_id: @machine.id) %></li>
-  </ul>
-</div>
+  <div class="col-md-3">
+    <legend>Math Models</legend>
+    <ul>
+      <% @machine.math_models.each do |math_model| %>
+        <li class="<%= "muted" unless math_model.active %>">
+          <%= math_model.name %>
+          <%= link_to 'Edit', edit_math_model_path(math_model) %>
+          <%= link_to "X", math_model_path(math_model), method: :delete, :data => { :confirm => 'Are you sure?' }, class: "delete" %>
+        </li>
+      <% end %>
+      <li><%= link_to "New Math Model", new_math_model_path(machine_id: @machine.id) %></li>
+    </ul>
+  </div>
 
-<div class="col-md-3">
-  <legend>Mini Game</legend>
-  <ul>
-    <% @machine.mini_games.each do |mini_game| %>
-      <li><%= "#{mini_game.name} -> #{link_to 'Edit', edit_mini_game_path(mini_game)}".html_safe %></li>
-    <% end %>
-    <li><%= link_to "New Mini Game", new_mini_game_path(machine_id: @machine.id) %></li>
-  </ul>
-</div>
+  <div class="col-md-3">
+    <legend>Mini Game</legend>
+    <ul>
+      <% @machine.mini_games.each do |mini_game| %>
+        <li>
+          <%= mini_game.name %>
+          <%= link_to 'Edit', edit_mini_game_path(mini_game) %>
+          <%= link_to "X", mini_game_path(mini_game), method: :delete, :data => { :confirm => 'Are you sure?' }, class: "delete" %>
+        </li>
+      <% end %>
+      <li><%= link_to "New Mini Game", new_mini_game_path(machine_id: @machine.id) %></li>
+    </ul>
+  </div>
 
 
-<div class="col-md-3">
-  <legend>In Game Assets</legend>
-  <ul>
-    <% @machine.in_game_assets.each do |asset| %>
-      <li class="<%= "muted" unless asset.active %>"><%= "#{asset.label} -> #{link_to 'Edit', edit_asset_path(asset.id)}".html_safe %></li>
-    <% end %>
-    <li><%= link_to "New In Game Asset", new_asset_path(resource_id: @machine.id, resource_type: "Machine", bundle_type: ASSET_BUNDLE_TYPE[:IN_GAME_ASSET]) %></li>
-  </ul>
-</div>
+  <div class="col-md-3">
+    <legend>In Game Assets</legend>
+    <ul>
+      <% @machine.in_game_assets.each do |asset| %>
+        <li class="<%= "muted" unless asset.active %>">
+          <%= asset.label %>
+          <%= link_to 'Edit', edit_asset_path(asset.id) %>
+          <%= link_to "X", asset_path(asset), method: :delete, :data => { :confirm => 'Are you sure?' }, class: "delete" %>
+        </li>
+      <% end %>
+      <li><%= link_to "New In Game Asset", new_asset_path(resource_id: @machine.id, resource_type: "Machine", bundle_type: ASSET_BUNDLE_TYPE[:IN_GAME_ASSET]) %></li>
+    </ul>
+  </div>
 
-<div class="col-md-3">
-  <legend>Out Game Assets</legend>
-  <ul>
-    <% @machine.out_game_assets.each do |asset| %>
-      <li class="<%= "muted" unless asset.active %>"><%= "#{asset.label} -> #{link_to 'Edit', edit_asset_path(asset.id)}".html_safe %></li>
-    <% end %>
-    <li><%= link_to "New Out Game Asset", new_asset_path(resource_id: @machine.id, resource_type: "Machine", bundle_type: ASSET_BUNDLE_TYPE[:OUT_GAME_ASSET]) %></li>
-  </ul>
-</div>
+  <div class="col-md-3">
+    <legend>Out Game Assets</legend>
+    <ul>
+      <% @machine.out_game_assets.each do |asset| %>
+        <li class="<%= "muted" unless asset.active %>">
+          <%= asset.label %>
+          <%= link_to 'Edit', edit_asset_path(asset.id) %>
+          <%= link_to "X", asset_path(asset), method: :delete, :data => { :confirm => 'Are you sure?' }, class: "delete" %>
+        </li>
+      <% end %>
+      <li><%= link_to "New Out Game Asset", new_asset_path(resource_id: @machine.id, resource_type: "Machine", bundle_type: ASSET_BUNDLE_TYPE[:OUT_GAME_ASSET]) %></li>
+    </ul>
+  </div>
+
+<% end %>
