--- a/app/views/math_models/_form.html.erb
+++ b/app/views/math_models/_form.html.erb
@@ -142,7 +142,7 @@
       <ul>
         <li>
         <% @math_model.reels.group_by(&:label).collect do |label, reels| %>
-          <b><%= label %></b>
+          <b>Reel <%= label %></b>
           <ul>
             <% reels.each do |reel| %>
               <li>
@@ -153,7 +153,7 @@
             <% end %>
           </ul>
         <% end %>
-        <li><%= link_to "New Reel", new_reel_path(math_model_id: @math_model.id) %></li>
+        <li><%= link_to "Reels", reels_math_model_path(id: @math_model.id) %></li>
       </ul>
     </li>
     <li>
