--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
         <% if user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Games", games_path %></li>
+            <li><%= link_to "Api Key", show_api_key_path %></li>
             <li><%= link_to("Logout", destroy_user_session_path, :method => :delete) %></li>
           </ul>
         <% end %>
