Fix views according to association

--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -8,8 +8,8 @@
   <dd><%= @machine.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
   <dd><%= @machine.description %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:theme_id) %>:</strong></dt>
-  <dd><%= @machine.theme_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:game_id) %>:</strong></dt>
+  <dd><%= @machine.game_id %></dd>
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
