--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -6,9 +6,8 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:machine_number) %></th>
       <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%= model_class.human_attribute_name(:game_id) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -17,9 +16,8 @@
     <% @machines.each do |machine| %>
       <tr>
         <td><%= link_to machine.id, machine_path(machine) %></td>
+        <td><%= machine.machine_number %></td>
         <td><%= machine.name %></td>
-        <td><%= machine.description %></td>
-        <td><%= machine.game_id %></td>
         <td><%=l machine.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
