--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -4,12 +4,10 @@
 </div>
 
 <dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:machine_number) %>:</strong></dt>
+  <dd><%= @machine.machine_number %></dd>
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @machine.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @machine.description %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:game_id) %>:</strong></dt>
-  <dd><%= @machine.game_id %></dd>
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
