--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -6,7 +6,7 @@
   <div class="form-group">
     <%= f.label :version, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-5">
-      <%= f.text_field :version, :class => 'form-control' %>
+      <%= f.text_field :version, :class => 'form-control', readonly: true %>
     </div>
   </div>
   <div class="form-group">
@@ -18,19 +18,13 @@
   <div class="form-group">
     <%= f.label :country, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-5">
-      <%= f.text_field :country, :class => 'form-control' %>
+      <%= f.select :country, options_for_select(['India', 'United States', 'United Kingdom', 'Canada', 'France', 'Germany', 'China', 'Japan', 'Korea', 'UAE'], (params[:country] || @asset.country)), {}, :class => 'form-control' %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :bundle_type, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-5">
       <%= f.select :bundle_type, options_for_select(ASSET_BUNDLE_TYPE, (params[:bundle_type] || @asset.bundle_type)), {}, readonly: true, :class => 'form-control' %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :label, :class => 'col-sm-2 control-label' %>
-    <div class="col-sm-5">
-      <%= f.text_field :label, :class => 'form-control' %>
     </div>
   </div>
 
