fix api's and multiple active assets

--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -35,6 +35,7 @@
       <option value="japan">Japan</option>
       <option value="korea">Korea</option>
       <option value="uae">UAE</option>
+      <option value="world_wide">World Wide</option>
     </select>
   
   <div class="col-md-3">
