--- a/app/views/assets/_form.html.erb
+++ b/app/views/assets/_form.html.erb
@@ -18,7 +18,7 @@
   <div class="form-group">
     <%= f.label :country, :class => 'col-sm-2 control-label' %>
     <div class="col-sm-5">
-      <%= f.select :country, options_for_select(['India', 'United States', 'United Kingdom', 'Canada', 'France', 'Germany', 'China', 'Japan', 'Korea', 'UAE'], (params[:country] || @asset.country)), {}, :class => 'form-control' %>
+      <%= f.select :country, options_for_select(COUNTRIES, f.object.country), {}, :class => 'form-control' %>
     </div>
   </div>
   <div class="form-group">
