Implemented session api with fb and device login.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,8 @@
             <li><%= link_to "Api Key", show_api_key_path %></li>
             <li><%= link_to("Logout", destroy_user_session_path, :method => :delete) %></li>
           </ul>
+        <% else %>
+          <li><%= link_to "Sign In", new_user_session_path %></li>
         <% end %>
       </div>
       
