--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -11,6 +11,36 @@
       <%= f.text_field :name, :class => 'form-control' %>
     </div>
   </div>
+  <div class="form-group">
+    <%= f.label :machine_type, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :machine_type, :class => 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :min_players, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :min_players, :class => 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :max_players, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :max_players, :class => 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :timeout, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :timeout, :class => 'form-control' %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :seed_money, :class => 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_field :seed_money, :class => 'form-control' %>
+    </div>
+  </div>
   
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">  
