--- a/app/views/tournaments/index.html.slim
+++ b/app/views/tournaments/index.html.slim
@@ -10,6 +10,8 @@ table class="table table-striped"
       th= model_class.human_attribute_name(:max_entry_level)
       th= model_class.human_attribute_name(:seed_money)
       th= model_class.human_attribute_name(:time_out)
+      th= model_class.human_attribute_name(:interval)
+      th= model_class.human_attribute_name(:points_required)
       th= model_class.human_attribute_name(:created_at)
       th=t '.actions', :default => t("helpers.actions")
   tbody
@@ -21,6 +23,8 @@ table class="table table-striped"
         td= tournament.max_entry_level
         td= tournament.seed_money
         td= tournament.time_out
+        td= tournament.interval
+        td= tournament.points_required
         td=l tournament.created_at
         td
           = link_to t('.edit', :default => t("helpers.links.edit")), edit_tournament_path(tournament), :class => 'btn btn-default btn-xs'
@@ -28,4 +32,5 @@ table class="table table-striped"
           = link_to t('.destroy', :default => t("helpers.links.destroy")), tournament_path(tournament), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
 
 = link_to t('.new', :default => t("helpers.links.new")), new_tournament_path, :class => 'btn btn-primary'
+
 
