--- a/app/views/tournaments/show.html.slim
+++ b/app/views/tournaments/show.html.slim
@@ -19,8 +19,18 @@ p
   br
   = @tournament.time_out
 
+p
+  strong= model_class.human_attribute_name(:interval) + ':'
+  br
+  = @tournament.interval
+p
+  strong= model_class.human_attribute_name(:points_required) + ':'
+  br
+  = @tournament.points_required
+
 = link_to t('.back', :default => t("helpers.links.back")), tournaments_path, :class => 'btn btn-default'
 '
 = link_to t('.edit', :default => t("helpers.links.edit")), edit_tournament_path(@tournament), :class => 'btn btn-default'
 '
 = link_to t('.destroy', :default => t("helpers.links.destroy")), tournament_path(@tournament), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
+
