--- a/app/views/tournaments/_form.html.slim
+++ b/app/views/tournaments/_form.html.slim
@@ -1,38 +1,38 @@
 = form_for @tournament, html: { class: "form form-horizontal tournament" } do |f|
   .form-group
-    = f.label :machine, :class => 'control-label col-lg-2'
+    = f.label :machine, "Machine Name", :class => 'control-label col-lg-2'
     .col-lg-10
-      = f.select :machine_id, Machine.all.collect{ |machine| [machine.id] }, {include_blank: "Select Machine" }, :class => 'form-control'
+      = f.select :machine_id, options_for_select(machine_name, @tournament.machine_id),{:prompt => "Select", :selected => params[:machine_id]}, :class => 'form-control'
     = error_span(@tournament[:machine_id])
   .form-group
-    = f.label :min_entry_level, :class => 'control-label col-lg-2'
+    = f.label :min_entry_level, "Player Entry Level", :class => 'control-label col-lg-2'
     .col-lg-10
       = f.text_field :min_entry_level, :class => 'form-control'
     = error_span(@tournament[:min_entry_level])
   .form-group
-    = f.label :max_entry_level, :class => 'control-label col-lg-2'
+    = f.label :max_entry_level, "Player Max Entry Level", :class => 'control-label col-lg-2'
     .col-lg-10
       = f.text_field :max_entry_level, :class => 'form-control'
     = error_span(@tournament[:max_entry_level])
   .form-group
-    = f.label :seed_money, :class => 'control-label col-lg-2'
+    = f.label :seed_money, "Seed Money", :class => 'control-label col-lg-2'
     .col-lg-10
       = f.text_field :seed_money, :class => 'form-control'
     = error_span(@tournament[:seed_money])
   .form-group
-    = f.label :time_out, :class => 'control-label col-lg-2'
+    = f.label :time_out, "Time Out (in ms)", :class => 'control-label col-lg-2'
     .col-lg-10
       = f.text_field :time_out, :class => 'form-control'
     = error_span(@tournament[:time_out])
 
   .form-group
-    = f.label :interval, :class => 'control-label col-lg-2'
+    = f.label :interval, "Interval between Two Tournaments (in ms)", :class => 'control-label col-lg-2'
     .col-lg-10
       = f.text_field :interval, :class => 'form-control'
     = error_span(@tournament[:interval])
 
   .form-group
-    = f.label :points_required, :class => 'control-label col-lg-2'
+    = f.label :points_required, "Entry Points Required", :class => 'control-label col-lg-2'
     .col-lg-10
       = f.text_field :points_required, :class => 'form-control'
     = error_span(@tournament[:points_required])
