Updated UI links in Dashboard

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -3,6 +3,6 @@
     .form-group
       - if user_signed_in?
         button type="submit" Sync Database
-  h1 Hello, world!
-  p Welcome to OET Services
+  h1 Hello, team!
+  p Welcome to Slot
   p= link_to "Learn more", "#", class: "btn btn-primary btn-lg"
